hphp/test/slow/meth-caller-bad-meth-2.php.expectf

Fatal error: Method name must be a literal string in %s/meth-caller-bad-meth-2.php on line 6
